<resources>
    <string name="app_name">Tip Calculator Part 3 - Navigation Lab 2 </string>

    <string-array name="numGuestsArray">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subtotal">Subtotal:</string>
    <string name="zero_dollars">$0.00</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="subtotal_plus_tip">Subtotal Plus Tip:</string>
    <string name="each_person_owes">Each Person Owes:</string>
    <string name="round_up">ROUND UP</string>
    <string name="round_down">ROUND DOWN</string>
</resources>