<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SubtotalFragment">

    <TextView
        android:id="@+id/subtotal_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/subtotal" />

    <TextView
        android:id="@+id/money_amount_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/subtotal_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/zero_dollars"/>

    <Button
        android:id="@+id/one_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toStartOf="@id/two_button"
        app:layout_constraintTop_toBottomOf="@id/money_amount_textView"/>

    <Button
        android:id="@+id/two_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two"

        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/money_amount_textView"
        />

    <Button
        android:id="@+id/three_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@id/two_button"
        app:layout_constraintTop_toTopOf="@id/two_button"
        />

    <Button
        android:id="@+id/four_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/four"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toStartOf="@id/five_button"
        app:layout_constraintTop_toBottomOf="@id/one_button"
        />

    <Button
        android:id="@+id/five_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/five"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/two_button">
    </Button>

    <Button
        android:id="@+id/six_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/six"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@id/five_button"
        app:layout_constraintTop_toBottomOf="@id/one_button"/>

    <Button
        android:id="@+id/seven_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seven"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toStartOf="@id/eight_button"
        app:layout_constraintTop_toBottomOf="@id/five_button"/>

    <Button
        android:id="@+id/eight_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/five_button"
        />

    <Button
        android:id="@+id/nine_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nine"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@id/eight_button"
        app:layout_constraintTop_toBottomOf="@id/five_button"
        />

    <ImageButton
        android:id="@+id/backspace_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_baseline_backspace_24"
        app:layout_constraintTop_toTopOf="@id/zero_button"
        app:layout_constraintBottom_toBottomOf="@id/zero_button"
        app:layout_constraintStart_toStartOf="@id/seven_button"
        app:layout_constraintEnd_toEndOf="@id/seven_button"/>

    <Button
        android:id="@+id/zero_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eight_button"/>

    <ImageButton
        android:id="@+id/done_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_baseline_check_24"
        app:layout_constraintStart_toStartOf="@id/nine_button"
        app:layout_constraintEnd_toEndOf="@id/nine_button"
        app:layout_constraintTop_toTopOf="@id/zero_button"
        app:layout_constraintBottom_toBottomOf="@id/zero_button"
        />

</androidx.constraintlayout.widget.ConstraintLayout>