<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FinalTotalFragment">


    <TextView
        android:id="@+id/subtotal_with_tip_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/subtotal_plus_tip"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/amount_for_each_person_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/each_person_owes"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@id/subtotal_with_tip_textView"
        app:layout_constraintStart_toStartOf="@id/subtotal_with_tip_textView"
        />

    <Button
        android:id="@+id/round_up_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/round_up"
        android:layout_marginTop="36dp"
        android:layout_marginStart="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/round_down_button"
        app:layout_constraintTop_toBottomOf="@id/amount_for_each_person_textView"
        />

    <Button
        android:id="@+id/round_down_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/round_down"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="26dp"
        app:layout_constraintStart_toEndOf="@id/round_up_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/round_up_button"
        />

</androidx.constraintlayout.widget.ConstraintLayout>